@@ -1,5 +1,12 @@
+<%args>
+    $runResolvConf
+</%args>
 # File generated by Zentyal.
 
-RESOLVCONF=yes
+% if ($runResolvConf) {
+RESOLVCONF="yes"
+% } else {
+RESOLVCONF="no"
+% }
 
 OPTIONS="-u bind -4"
